--- a/requirements.txt
+++ b/requirements.txt
@@ -1,123 +1,92 @@
 -f /usr/share/pip-wheels
 absl-py==0.8.1
-aenum==2.2.2
 aggdraw==1.3.11
 alabaster==0.7.12
 alembic==1.2.1
 aniso8601==8.0.0
-ansible==2.8.6
 appdirs==1.4.3
-argh==0.26.2
+argcomplete==1.10.0
 arrow==0.15.2
 asn1crypto==1.2.0
 astor==0.8.0
-astropy==2.0.16
 async==0.6.2
 atomicwrites==1.3.0
 attrs==19.3.0
-Automat==0.8.0
 Babel==2.7.0
-backports-abc==0.5
-backports.csv==1.0.7
-backports.functools-lru-cache==1.6.1
-backports.shutil-get-terminal-size==1.0.0
-backports.weakref==1.0.post1
+backcall==0.1.0
 banal==0.4.2
-bashplotlib==0.6.5
 bcrypt==3.1.7
-beanstalkc==0.4.0
-BeautifulSoup==3.2.2
 beautifulsoup4==4.8.1
 biopython==1.74
+black==19.3b0
 bleach==3.1.0
-blessings==1.7
 blinker==1.4
 bokeh==1.3.4
 boto==2.49.0
-boto3==1.10.4
-botocore==1.13.4
+boto3==1.10.2
+botocore==1.13.2
 bottle==0.12.17
+Bottleneck==1.2.1
 bottlenose==1.1.8
-bpython==0.18
 BTrees==4.6.0
-bz2file==0.98
-bzr==2.7.0
 cachetools==3.1.1
-cairocffi==0.9.0
-CairoSVG==1.0.22
+cairocffi==1.1.0
+CairoSVG==2.4.2
 Cartopy==0.17.0
-census==0.8.13
 certifi==2019.9.11
 cffi==1.13.1
 cftime==1.0.4.2
 Chameleon==3.6.2
 chardet==3.0.4
-Cheetah==2.4.4
 cheroot==8.2.1
-CherryPy==17.4.2
+CherryPy==18.3.0
 Click==7.0
 click-plugins==1.1.1
 cligj==0.5.0
+cloudpickle==1.2.2
 colorama==0.4.1
-colorlog==4.0.2
 configobj==5.0.6
-configparser==4.0.2
-confusable-homoglyphs==3.2.0
-constantly==15.1.0
-contextlib2==0.6.0.post1
-CoolProp==6.3.0
 coverage==4.5.4
 cryptography==2.8
 cssselect==1.1.0
 cssselect2==0.2.2
-curtsies==0.3.0
 cycler==0.10.0
-cypari==2.3.0
 Cython==0.29.13
+dask==2.6.0
 dataset==1.1.2
 decorator==4.4.1
 dectate==0.13
 defusedxml==0.6.0
-Django==1.11.26
+Django==2.2.7
 django-blog-zinnia==0.20
 django-bootstrap-form==3.4
 django-classy-tags==0.9.0
-django-cms==3.7.0
 django-contrib-comments==1.9.1
-django-facebook==6.0.3
+django-crispy-forms==1.12.0
 django-formtools==2.1
 django-js-asset==1.2.2
-django-mptt==0.9.1
+django-mptt==0.10.0
 django-object-tools==2.0.0
-django-openid-auth==0.15
-django-registration==3.0.1
+django-pandas==0.6.4
 django-sekizai==1.0.0
-django-social-auth==0.7.28
 django-tagging==0.4.6
 django-treebeard==4.3
 django-xmlrpc==0.1.8
 djangocms-admin-style==1.4.0
 docopt==0.6.2
 docutils==0.15.2
+docx2txt==0.8
 dominate==2.4.0
-dropbox==9.4.0
-dulwich==0.19.13
-easydev==0.9.38
 EasyProcess==0.2.7
-elaphe==0.6.0
+EbookLib==0.17.1
 entrypoints==0.3
-enum34==1.1.6
-epydoc==3.0.1
 et-xmlfile==1.0.1
-evernote==1.25.3
-fabric==2.5.0
-facebook-sdk==3.1.0
+extract-msg==0.23.1
 falcon==2.0.0
 feedfinder2==0.0.4
 feedgenerator==1.9
 feedparser==5.2.1
 filebrowser-safe==0.5.0
-Fiona==1.8.9.post2
 Flask==1.1.1
 Flask-Admin==1.5.4
 Flask-Babel==0.12.2
@@ -125,79 +94,45 @@ Flask-Bcrypt==0.7.1
 Flask-Bootstrap==3.3.7.1
 Flask-HTTPAuth==3.3.0
 Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-OpenID==1.2.5
 Flask-RESTful==0.3.7
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
 Flask-SSLify==0.1.5
-Flask-WhooshAlchemy==0.56
 Flask-WTF==0.14.2
-funcsigs==1.0.2
-functools32==3.2.3.post2
 future==0.18.1
-futures==3.3.0
-FXrays==1.3.3
-gast==0.2.2
-GDAL==1.11.2
-gdata==2.0.18
+gast==0.3.2
 Genshi==0.7.3
+gensim==3.8.1
 geographiclib==1.50
-GeoIP==1.3.2
 geopy==1.20.0
 gevent==1.4.0
-geventhttpclient==1.3.1
 gitdb==0.6.4
 gitdb2==2.0.6
-GitPython==2.1.14
+GitPython==3.0.4
 gmpy==1.17
 google-api-python-client==1.7.11
 google-auth==1.6.3
 google-auth-httplib2==0.0.3
 google-pasta==0.1.7
-graphql-core==2.2.1
 grappelli-safe==0.5.2
 greenlet==0.4.15
-grequests==0.4.0
-grok==3.1
-grokcore.annotation==3.0.1
-grokcore.catalog==3.0.1
-grokcore.chameleon==3.0.1
 grokcore.component==3.1
-grokcore.content==3.0.2
-grokcore.formlib==3.0.1
-grokcore.json==3.0.3
-grokcore.layout==3.0.3
-grokcore.message==3.0.1
-grokcore.rest==3.0.1
-grokcore.security==3.0.1
-grokcore.site==3.0.3
-grokcore.traverser==3.0.1
-grokcore.view==3.1
-grokcore.viewlet==3.1.0
-grokcore.xmlrpc==3.0.0
 grpcio==1.24.3
 h5py==2.10.0
-hg-git==0.8.12
 html5lib==1.0.1
-http-parser==0.8.3
 httplib2==0.14.0
 hupper==1.9
-hyperlink==19.0.0
 idna==2.8
+imageio==2.6.1
+imageio-ffmpeg==0.3.0
 imagesize==1.1.0
 IMAPClient==2.1.0
 importlib-metadata==0.23
 importscan==0.1
-incf.countryutils==1.0
-incremental==17.5.0
 inflection==0.3.1
-invoke==1.3.0
-iotop==0.6
-ipaddress==1.0.23
-ipykernel==4.10.1
+ipykernel==5.1.3
 ipyparallel==5.0.1
-ipython==5.8.0
+ipython==7.8.0
 ipython-genutils==0.2.0
 ipywidgets==5.2.3
 isodate==0.6.0
@@ -205,43 +140,34 @@ isort==4.3.21
 itsdangerous==1.1.0
 jaraco.functools==2.0
 jdcal==1.4.1
-jellyfish==0.5.6
+jedi==0.15.1
+jellyfish==0.7.2
 jieba3k==0.35.1
 Jinja2==2.10.3
 jmespath==0.9.4
+joblib==0.14.0
 jsonschema==3.1.1
 jupyter==1.0.0
 jupyter-client==5.3.4
-jupyter-console==5.2.0
+jupyter-console==6.0.0
 jupyter-core==4.6.1
-Keras==2.3.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
 kiwisolver==1.1.0
-la==0.6.0
-linecache2==1.0.0
-Logbook==1.5.3
-lxml==4.2.3
-Mako==1.0.3
+lxml==4.4.1
+Mako==1.1.0
 marisa-trie==0.7.5
 Markdown==3.1.1
-MarkupSafe==0.23
+MarkupSafe==1.1.1
 martian==1.3.post1
-matplotlib==2.2.4
+matplotlib==3.1.1
 mechanize==0.4.3
-mercurial==5.1.2
-Mezzanine==4.3.1
 mimerender==0.6.0
 mistune==0.8.4
-mlpy==3.5.0
 mock==3.0.5
-mod-pywebsocket==0.7.9
-more-itertools==5.0.0
+more-itertools==4.3.0
 morepath==0.18.2
 mots-vides==2015.5.11
-mplh5canvas==0.7
+moviepy==1.0.1
 mpmath==1.1.0
-munch==2.4.0
 mysql-connector-python==8.0.18
 mysqlclient==1.4.4
 nbconvert==5.6.1
@@ -251,36 +177,28 @@ neobolt==1.7.15
 neotime==1.7.4
 netCDF4==1.5.3
 netifaces==0.10.9
-networkx==2.2
+networkx==2.4
+newspaper3k==0.2.8
 nltk==3.4.5
 normality==2.0.0
 nose==1.3.7
 notebook==4.2.2
 numexpr==2.7.0
-numpy==1.16.5
-oauth==1.0.1
-oauth2==1.9.0.post1
+numpy==1.17.3
 oauth2client==4.1.3
 oauthlib==3.1.0
-opencv-contrib-python-headless==4.1.1.26
-openopt==0.5629
-openpyxl==2.6.4
-opt-einsum==2.3.2
-oursql==0.9.3.2
+olefile==0.46
+openpyxl==3.0.0
 packaging==19.2
-pandas==0.24.2
+pandas==0.25.2
 pandocfilters==1.4.2
 paramiko==2.6.0
-parsel==1.5.2
+parso==0.5.1
 Paste==3.2.2
 PasteDeploy==2.0.1
 pathlib2==2.3.5
-pathtools==0.1.2
-patsy==0.5.1
-Pattern==3.6
 pbr==5.4.3
-pdfminer==20140328
-pdfrw==0.4
+pdfminer.six==20181108
 peewee==3.11.2
 pelican==4.2.0
 pep8==1.7.1
@@ -288,26 +206,18 @@ persistent==4.5.0
 pexpect==4.7.0
 pickleshare==0.7.5
 Pillow==6.2.1
-Pinax==0.9a2
 Pint==0.9
-pisa==3.0.33
-Pivy==0.5.0
 plaster==1.0
 plaster-pastedeploy==0.7
-plink==2.3
 plotly==4.2.1
-pluggy==0.7.1
-ply==3.7
+pluggy==0.13.0
 pocketsphinx==0.1.15
 portend==2.5
-pp==1.6.5
-praw==6.3.1
+praw==6.4.0
 prawcore==1.0.1
 prettytable==0.7.2
-prometheus-client==0.7.1
-promise==2.2.1
-prompt-toolkit==1.0.18
-Protego==0.1.15
+proglog==0.1.9
+prompt-toolkit==2.0.10
 protobuf==3.10.0
 psutil==5.6.3
 psycopg2-binary==2.8.4
@@ -315,192 +225,146 @@ ptyprocess==0.6.0
 pudb==2019.1
 py==1.8.0
 py-bcrypt==0.4
-PyAMF==0.8.0
+py2neo==4.3.0
 pyasn1==0.4.7
 pyasn1-modules==0.2.7
-pycollada==0.6
+pycairo==1.18.1
+pycodestyle==2.5.0
 pycparser==2.19
 pycrypto==2.6.1
-pycsp==0.9.2
+pycryptodome==3.9.0
 pycurl==7.43.0.3
 pyDatalog==0.17.1
-PyDispatcher==2.0.5
-pydot==1.4.1
 pydub==0.23.1
 pyenchant==2.0.0
-pyfits==3.5
 pyflakes==2.1.1
+pyflakes3k==0.4.3
 pygal==2.4.0
 pygeoip==0.3.2
 Pygments==2.3.1
-pygraphviz==1.5
-PyHamcrest==1.9.0
+PyGObject==3.34.0
 pyhdf==0.10.1
 PyJWT==1.7.1
 Pykka==2.0.1
 pymc==2.3.6
 pymongo==3.9.0
 PyNaCl==1.3.0
-pyodbc==4.0.27
-PyOpenGL==3.0.2
 pyOpenSSL==19.0.0
 pyparsing==2.4.2
-PyPDF2==1.26.0
-pypdfocr==0.9.1
-pypdftk==0.4
 Pyphen==0.9.5
-pypng==0.0.20
-pyproj==2.2.2
 pyquery==1.4.1
 pyramid==1.10.4
 pyrsistent==0.15.5
-PySAL==1.14.4
 pyserial==3.4
 pyshp==2.1.0
-PySocks==1.7.1
 pyspotify==2.1.0
-Pyste==0.9.10
-PyStemmer==1.3.0
 pytesseract==0.3.0
-pytest==3.6.4
+pytest==5.2.2
 python-amazon-simple-product-api==2.2.11
 python-dateutil==2.8.0
-python-docx==0.8.10
 python-editor==1.0.4
 python-gettext==4.0
-python-gflags==3.1.2
-python-instagram==1.3.2
-python-ldap==3.2.0
 python-Levenshtein==0.12.0
 python-magic==0.4.15
 python-mimeparse==1.6.0
-python-openid==2.2.5
+python-pptx==0.6.18
 python-slugify==4.0.0
 pytz==2019.3
 PyVirtualDisplay==0.2.4
+PyWavelets==1.1.1
 PyYAML==5.1.2
 pyzmq==18.1.1
 qrcode==6.1
 qtconsole==4.5.5
 Quandl==3.4.8
-QuantLib-Python==1.7
-queuelib==1.5.0
 rdflib==4.2.2
 redis==3.3.11
 reg==0.11
 regex==2019.8.19
-remix==2.4.0
-reportlab==3.5.31
 repoze.lru==0.7
 requests==2.22.0
 requests-cache==0.5.2
 requests-file==1.4.3
 requests-oauthlib==1.2.0
-restkit==4.2.2
-RestrictedPython==5.0
 retrying==1.3.3
-rpy2==2.8.6
+rpy2==3.2.1
 rsa==4.0
 ruffus==2.8.3
-Rx==1.6.1
-s3cmd==2.0.2
 s3transfer==0.2.1
-scandir==1.10.0
-scikit-learn==0.20.4
-scikits.statsmodels==0.3.1
-scipy==1.2.2
-Scrapy==1.8.0
+scikit-image==0.15.0
+scikit-learn==0.21.3
+scipy==1.3.1
 selenium==2.53.6
-Send2Trash==1.5.0
-service-identity==18.1.0
 setproctitle==1.1.10
 Shapely==1.6.4.post2
 simplegeneric==0.8.1
-SimpleHMMER==0.2.3
 simplejson==3.16.0
 simpy==3.0.11
 singledispatch==3.4.0.3
-six==1.13.0
+six==1.16.0
 smart-open==1.8.4
 smmap==0.9.0
 smmap2==2.0.5
-snappy==2.7
-snappy-manifolds==1.1
 snowballstemmer==2.0.0
-soaplib==1.0.0
 socketpool==0.5.3
+SocksiPy-branch==1.1
 sortedcontainers==2.1.0
-soupsieve==1.9.4
+soupsieve==1.9.5
 South==1.0.2
 SPARQLWrapper==1.8.4
-speaklater==1.3
-spectrum==0.7.5
-spherogram==1.8.2
-Sphinx==1.8.5
-sphinxcontrib-websupport==1.1.2
+SpeechRecognition==3.8.1
+Sphinx==2.2.1
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
 SQLAlchemy==1.3.10
-sqlalchemy-migrate==0.13.0
 sqlparse==0.3.0
-statsmodels==0.10.1
 stevedore==1.31.0
 stripe==2.37.2
-subprocess32==3.5.4
-suds==0.4
-svn==0.3.46
 sympy==1.4
 TA-Lib==0.4.17
-tables==3.5.2
-tabulate==0.8.5
 Tempita==0.5.2
 tempora==1.14.1
-tensorboard==2.0.0
-tensorflow==2.0.0
-tensorflow-estimator==2.0.1
 termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
 texcaller==0
 text-unidecode==1.3
 textblob==0.15.3
+textract==1.6.3
 tinycss==0.4
-tinycss2==0.6.1
+tinycss2==1.0.2
+tinysegmenter==0.3
 tldextract==2.2.2
-TornadIO2==0.0.4
-tornado==5.1.1
-Trac==1.4
-traceback2==1.4.0
+toml==0.10.0
+toolz==0.10.0
+tornado==6.0.3
+tqdm==4.37.0
 traitlets==4.3.3
 transaction==2.4.0
 translationstring==1.3
-trollius==2.2.post1
-tweepy==3.8.0
 twilio==6.32.0
-Twisted==19.7.0
 twitter==1.18.0
-typing==3.7.4.1
-tzlocal==2.0.0
+tzlocal==1.5.1
 uncertainties==3.1.2
 Unidecode==1.1.1
-unittest2==1.1.0
 update-checker==0.16
 uritemplate==3.0.0
 urllib3==1.24.3
 urwid==2.0.1
-us==1.0.0
 venusian==1.2.0
 virtualenv==16.7.7
 virtualenv-clone==0.5.3
 virtualenvwrapper==4.8.4
 visitor==0.1.3
-VTK==5.10.1
 w3lib==1.21.0
 waitress==1.3.1
 Wand==0.5.7
-watchdog==0.9.0
 wcwidth==0.1.7
-WeasyPrint==0.42.3
-web.py==0.40
-webapp2==2.5.2
+WeasyPrint==50
 webencodings==0.5.1
 WebOb==1.8.5
 websocket-client==0.56.0
@@ -520,18 +384,12 @@ widgetsnbextension==1.2.6
 wrapt==1.11.2
 WSGIProxy2==0.4.6
 WTForms==2.2.1
-wxPython==3.0.2.0
-wxPython-common==3.0.2.0
-xgboost==0.82
+xgboost==0.90
 xlrd==1.2.0
-xlutils==2.0.0
+XlsxWriter==1.2.2
 xlwt==1.3.0
-z3c.autoinclude==0.3.9
-z3c.flashmessage==2.1
 z3c.pt==3.2.0
-zbar==0.10
 zc.buildout==2.13.2
-zc.catalog==3.0
 zc.lockfile==2.0
 ZConfig==3.5.0
 zdaemon==4.3
@@ -560,12 +418,10 @@ zope.deferredimport==4.3.1
 zope.deprecation==4.4.0
 zope.dottedname==4.3
 zope.error==4.5.0
-zope.errorview==1.2.0
 zope.event==4.4
 zope.exceptions==4.3
 zope.filerepresentation==4.2.0
 zope.formlib==4.6.0
-zope.generations==5.0.0
 zope.hookable==4.2.0
 zope.i18n==4.7.0
 zope.i18nmessageid==4.3.1
